// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowcaseCard should render correctly 1`] = `
<li
  class="md-paper md-paper--1 md-card md-background--card showcase-card"
>
  <a
    class="md-media md-media--16-9"
    href="https://react-md.mlaursen.com"
    title="react-md Documentation website"
  >
    <img
      alt="react-md Documentation website"
      src="https://react-md.mlaursen.com/assets/logo.svg"
    />
  </a>
  <div
    class="md-card-title md-card-title--primary"
  >
    <div
      class="md-card-title--title-block"
    >
      <h2
        class="md-card-title--title md-card-title--large md-text"
      >
        react-md Documentation website
      </h2>
      <h3
        class="md-card-title--title md-text--secondary"
      >
        MIkkel Laursen
      </h3>
    </div>
  </div>
  <section
    class="md-card-text"
  >
    It is a website about documenting react-md. Who'da thunk?
  </section>
</li>
`;

exports[`ShowcaseCard should render correctly 2`] = `
<li
  class="md-paper md-paper--1 md-card md-background--card showcase-card"
>
  <a
    class="md-media md-media--16-9"
    href="https://react-md.mlaursen.com"
    title="react-md Documentation website"
  >
    <img
      alt="react-md Documentation website"
      src="https://react-md.mlaursen.com/assets/logo.svg"
    />
  </a>
  <div
    class="md-card-title md-card-title--primary"
  >
    <div
      class="md-card-title--title-block"
    >
      <h2
        class="md-card-title--title md-card-title--large md-text"
      >
        react-md Documentation website
      </h2>
      <h3
        class="md-card-title--title md-text--secondary"
      >
        MIkkel Laursen
      </h3>
    </div>
    <a
      class="md-btn md-btn--icon md-pointer--hover md-inline-block"
      href="https://github.com/mlaursen/react-md"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon fa fa-github md-text--inherit"
      />
    </a>
  </div>
  <section
    class="md-card-text"
  >
    It is a website about documenting react-md. Who'da thunk?
  </section>
</li>
`;
